--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     compile('com.sparkjava:spark-core:2.9.0')
     compile('com.sparkjava:spark-template-handlebars:2.7.1')
     compile('ch.qos.logback:logback-classic:1.2.3')
-    compile('com.googlecode.json-simple:json-simple:1.1.1')
+    implementation 'com.google.code.gson:gson:2.8.5'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
