[FEATURE] Apply dependencies for web and db
스파크, 핸들바, jdbc 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,8 @@ repositories {
 dependencies {
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
+
+    compile "com.sparkjava:spark-core:2.8.0"
+    compile "com.sparkjava:spark-template-handlebars:2.7.1"
+    compile 'org.apache.commons:commons-dbcp2:2.6.0'
 }
