--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,4 @@ server=localhost:3306
 database=woowa?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 user=jun
 password=1234
+driver-class-name=com.mysql.cj.jdbc.Driver
