--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile('com.sparkjava:spark-template-handlebars:2.7.1')
     compile('ch.qos.logback:logback-classic:1.2.3')
     implementation 'com.google.code.gson:gson:2.8.5'
+    compile("mysql:mysql-connector-java:8.0.16")
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
