--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile('ch.qos.logback:logback-classic:1.2.3')
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
 }
