--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     testCompile('org.assertj:assertj-core:3.11.1')
     compile "com.sparkjava:spark-core:2.8.0"
     compile "com.google.code.gson:gson:2.8.0"
+    compile("mysql:mysql-connector-java:8.0.16")
 }
