--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 dependencies {
     compile('com.sparkjava:spark-core:2.9.0')
     compile('com.sparkjava:spark-template-handlebars:2.7.1')
+    compile("mysql:mysql-connector-java:8.0.16")
     compile('ch.qos.logback:logback-classic:1.2.3')
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
