--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
 
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
+    testCompile group: 'com.h2database', name: 'h2', version:'1.4.194'
 }
