feat: test용 DB runtime용 DB 분리 (리팩토링 많이 필요)

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,4 @@
-server=localhost:3306
-database=woowa?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+driver-class-name=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://localhost:3306/woowa?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 user=jun
 password=1234
-driver-class-name=com.mysql.cj.jdbc.Driver
