--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,11 @@ dependencies {
     compile('com.sparkjava:spark-core:2.9.0')
     compile('com.sparkjava:spark-template-handlebars:2.7.1')
     compile('ch.qos.logback:logback-classic:1.2.3')
-    runtime('mysql:mysql-connector-java:8.0.16')
+//    runtime('mysql:mysql-connector-java:8.0.16')
+    compile group: 'com.h2database', name: 'h2', version:'1.4.194'
 
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
-    testCompile group: 'com.h2database', name: 'h2', version:'1.4.194'
+//    testCompile group: 'com.h2database', name: 'h2', version:'1.4.194'
+
 }
