--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,7 @@ dependencies {
     compile('ch.qos.logback:logback-classic:1.2.3')
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
+    compile "com.sparkjava:spark-core:2.8.0"
+    compile "com.google.code.gson:gson:2.8.0"
+    compile("mysql:mysql-connector-java:8.0.16")
 }
