--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
+    compile("mysql:mysql-connector-java:8.0.16")
     compile('com.sparkjava:spark-core:2.9.0')
     compile('com.sparkjava:spark-template-handlebars:2.7.1')
     compile('ch.qos.logback:logback-classic:1.2.3')
