--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.11.1')
+    compile("mysql:mysql-connector-java:8.0.16")
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
 
 }
