--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,9 @@ repositories {
 }
 
 dependencies {
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile('com.sparkjava:spark-core:2.9.1')
-    compile('com.sparkjava:spark-template-handlebars:2.7.1')
     compile('ch.qos.logback:logback-classic:1.2.3')
     testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
     testCompile('org.assertj:assertj-core:3.12.2')
